--- a/background.properties
+++ b/background.properties
@@ -7,7 +7,7 @@
 # 并修改以适合您的需要。
 #
 # 位置： "/assets/minecraft/optifine/gui/background.properties"
-# 控制主菜单全景图的行为。
+# 控制主菜单全景图(panorama)的行为。
 # 
 # 可选用的全景图文件夹：
 #   /assets/minecraft/optifine/gui/background1 
@@ -26,19 +26,19 @@
 # 可选用的全景图文件夹可以包含"background.properties"以
 # 定义全景的自定义属性
 
-# 权重（可选）
+# 权重(weight)（可选）
 # 为随机选择的权重，高权重将被更频繁地选中
 # 默认为1
 weight=<weight> 
 
-# 模糊水平（可选）
+# 模糊水平(Blur level)（可选）
 # 主菜单背景使用3种类型的模糊
 # 高模糊水平或会降低主菜单的FPS
 blur1=<1-64>
 blur2=<1-3>
 blur3=<1-3>
 
-# 覆盖颜色（可选）
+# 覆盖颜色(Overlay colors)（可选）
 # 在背景图像上绘有两个梯度覆盖
 # 当顶部和底部的颜色为0时，覆盖被禁用
 # 颜色格式为ARGB（hex）
