--- a/dynamic_lights.properties
+++ b/dynamic_lights.properties
@@ -1,24 +1,24 @@
 ###############################################################################
-# Sample configuration for OptiFine's Dynamic Lights feature.
+# Optifine动态光照的配置的实例
 ###############################################################################
 # dynamic_lights.properties
 ###############################################################################
-# This file is offered without any copyright restrictions. 
-# Please copy and modify it to suit your needs.
+# 此文件没有任何版权限制。请复制
+# 并修改以适合您的需要。
 #
-# This configuration file allows mods to define dynamic light levels for entities and items.
-# Location: "/assets/<mod_id>/optifine/dynamic_lights.properties"
+# 此配置可以让mod定义实体与物品的动态光照的等级
+# 文件位置"/assets/<mod_id>/optifine/dynamic_lights.properties"
 
-# Entity light levels
-# The entity name is automatically expanded with the mod_id.
-# The light level should be between 0 and 15. 
-# For exaple:
+# 实体光照等级
+# 实体的名称会由mod_id自动扩展。
+# 光照等级的值必须在0到15的范围内。
+# 例：
 #   entities=basalz:15 blitz:7
 entities=<entity:light> ...  
 
-# Item light levels
-# The item name is automatically expanded with the mod_id.
-# The light level should be between 0 and 15. 
-# For exaple:
+# 物品光照等级
+# 物品的名称会由mod_id自动扩展。
+# 光照等级的值必须在0到15的范围内. 
+# 例:
 #   items=florb:15 morb:7
 items=<item:light> ...  
