--- a/block.properties
+++ b/block.properties
@@ -1,26 +1,26 @@
 ###############################################################################
-# Sample configuration for OptiFine's Custom Blocks feature.
+# Optifine自定义方块的配置的实例
 ###############################################################################
 # block.properties
 ###############################################################################
-# This file is offered without any copyright restrictions. 
-# Please copy and modify it to suit your needs.
+# 此文件没有任何版权限制。请复制
+# 并修改以适合您的需要。
 #
-# Location: "/assets/minecraft/optifine/block.properties"
+# 位置： "/assets/minecraft/optifine/block.properties"
 #
 
-# Render layer (optional)
-# Defines custom render layer for the given blocks
-# Layers
-#   solid - no alpha, no blending (solid textures)
-#   cutout - alpha, no blending (cutout textures)
-#   cutout_mipped - alpha, no blending, mipmaps (cutout with mipmaps)
-#   translucent - alpha, blending, mipmaps (water, stained glass)
+# 渲染等级（可选）
+# 对给定方块定义特殊渲染等级
+# 等级：
+#   solid - 无alpha通道，无烘培效果 (solid textures)
+#   cutout - 有alpha通道，无烘培效果 (cutout textures)
+#   cutout_mipped - 有alpha通道，无烘培效果，带(Mipmaps)多级渐远纹理(cutout with mipmaps)
+#   translucent - 有alpha通道, 有烘培效果blending,带(Mipmaps)多级渐远纹理(water, stained glass)
 # 
-# Blocks which are solid opaque cubes (stone, dirt, ores, etc) can't be rendered on a custom layer
-# as this would affect face culling, ambient occlusion, light propagation and so on.
+# 不能在自定义渲染等级中渲染固体不透明方块（石头，泥土，矿石等）。
+# 因为这会影响面部剔除，环境遮挡，光传播等。
 #
-# For exaple:
+# 例:
 #   layer.translucent=glass_pane fence wooden_door
 # 
 layer.solid=<blocks>
