--- a/ctm.properties
+++ b/ctm.properties
@@ -1,89 +1,90 @@
 ###############################################################################
-# Sample configuration for OptiFine's Connected Textures feature.
-# Based on the configuration for MCPatcher's Connected Textures mod.
+# OptiFine的纹理连接功能的实例
+# 基于MCPatcher的纹理连接mod的配置
 #
-# Not implemented:
+# 尚未实现的功能:
 # - renderPass
 #
 ###############################################################################
 # ctm.properties
 ###############################################################################
 #
-# For each block or terrain tile you wish to override with connected or random
-# textures, use this template and create a .properties file in the
-# optifine/ctm folder of your texture pack.  Properties files can be organized
-# into subfolders of any depth, as long as everything is within the top-level
-# optifine/ctm folder.
+# 为了将连接或者随机纹理覆盖于您所期望的块或地形块(terrain tile)
+# 请编辑此模板并将此文件命名为"<自定义名称>.properties"并放置于您的材质包中的"optifine/ctm"目录下
+# 为了方便文件归档，"optifine/ctm"下的所有配置都可以位于任何深度的目录树中，
+# 如:
+#   |optifine
+#             |ctm
+#                 |Wood
+#                        \wood.properties
+#                  |sandstone
+#                        \sandstone.properties
+#                  |ice
+#                        |blue_ice
+#                                  \blue_ice.properties
 #
-# Different types of connected texture methods are available with different
-# requirements and restrictions.  See below for details for each method.
+# 不同类型连接纹理方法具有不同的要求与限制，具体如下文
 #
-# All property names are case-sensitive.
-# All paths are relative to assets/minecraft unless otherwise stated.
+# 所有属性名都为大小写敏感.
+# 除非另外说明，所有的路径皆相对于"assets/minecraft"路径。
 ###############################################################################
 
 ###############################################################################
-# General properties used by all methods:
+# 所有纹理连接方法中都可以使用的常规属性:
 ###############################################################################
 
-# (Optional) List of block and/or tiles this method should apply to.
-# Multiple .properties file can refer to the same block/tile and they will be
-# processed in alphabetical order by filename.  All tile-based entries are
-# checked before block ID-based ones.  The first match wins.
+# (可选)此方法要作用的块与/或面 
+# 多个.properties文件可以对应相同的块/面，且这些文件会按文件名的字母顺序来处理，所有基于名称的实体将比基于ID的实体拥有更高的检查优先级
+# The first match wins.
 matchTiles=<list of matching tile names>
 
-# To refer to a tile from vanilla MC, simply use its name in textures/block:
+# 在配置中引用一个来自于原版(vanilla)MC的纹理, 只需要直接声明此面的名称:
 #   matchTiles=dirt
-# To refer to a tile from a mod, you will need to know its name
+# 在配置中引用一个来自于mod的纹理，你需要像下面一样进行声明
 #   matchTiles=botania:blazeblock
-# Tiles output by CTM rules can also be matched by another rule.  The tile name
-# is simply the full path to the tile
+# 从CTM规则中导出的纹理也可被其他的规则所引用，纹理的引用名称为此纹理的完整路径
 #   matchTiles=optifine/ctm/mygrass/1.png
-# Block format (optional parts are in <>)
+# 块的格式 (可选部分位于<>中)
 #   <namespace:>name<:property1=value1,value2...:property2=value1,value2...>
-# For example:
+# 例如:
 #   short name:         oak_stairs
 #   full name:          minecraft:oak_stairs
 #   name + properties:  minecraft:oak_stairs:facing=east,west:half=bottom
 matchBlocks=<list of blocks + optional properties>
 
-# These two properties can be omitted if they can be inferred from the filename instead:  
-# - optifine/ctm/xxx/<name>.properties assumes
+# 如果可以从文件名中推断出这两个属性，则可以在文件中省略这两个属性:  
+# - optifine/ctm/xxx/<name>.properties
 #     matchTiles=<name>
-# - optifine/ctm/xxx/block_<name>.properties assumes
+# - optifine/ctm/xxx/block_<name>.properties
 #     matchBlocks=<name>
-# unless you specify either property explicitly.
+# 除非您具体的指定了这两个属性中的任意一个.
 
-# (Optional) If multiple properties files match the same block, the highest
-# weighted one is used.  In the event of a tie, the properties filenames are
-# compared next.  The default weight is 0.
+# (可选) 若存在两个以上的属性文件都作用于同一个块，则权重值最高的那个属性文件将被使用，若出现权重值相同的状况，则比较属性文件名，权重的值默认为零。
 weight=<integer>
 
-# (Required) Method to use when choosing a block's replacement texture:
-# Methods:
-#   ctm: Standard 8-way method (glass in the original CTM), uses 47 tiles.
-#   ctm_compact: Compact 8-way method, uses 5 tiles.
-#   horizontal: Connect to blocks on left and right only (bookshelves).
-#   vertical: Connect to blocks above and below only.
-#   horizontal+vertical: Connect horizontally, then vertically.
-#   vertical+horizontal: Connect vertically, then horizontally.
-#   top: Connect to block above only (sandstone).
-#   random: Pick a tile at random.
-#   repeat: Repeat a fixed pattern over large areas.
+# (必须) 选择块替换纹理时的应用方案:
+# 方案:
+#   ctm: 标准的8通道方案，使用47张纹理。
+#   ctm_compact: 紧凑的8通道方案，使用5张纹理。
+#   horizontal: 块的纹理只和位于左侧或右侧的相邻块的纹理相连(例如书架)。
+#   vertical: 块的纹理只和顶部或者底部的相邻方块的纹理相连.
+#   horizontal+vertical: 首先和位于水平位置的相邻块的纹理相连，再于位于垂直方向的相邻块的纹理相连。
+#   vertical+horizontal: 首先和位于垂直方向的相邻块的纹理相连，再于位于水平位置的相邻块的纹理相连。
+#   top: 块的纹理只和在这个方块上方的相邻块的纹理相连。
+#   random: 随机选择要连接的面的方向.
+#   repeat: 在指定面积大小的块的区域中显示指定的图案。
 #   fixed: Use a single fixed tile.  Equivalent to random with only one tile.
 #   overlay: Overlay for block transitions, uses 17 tiles.
 #   overlay_ctm: Overlay variant of method "ctm".
 #   overlay_random: Overlay variant of method "random".
 #   overlay_repeat: Overlay variant of method "repeat".
 #   overlay_fixed: Overlay variant of method "fixed".
-# The overlay methods can be combined with other methods if they come 
-# before them in the processing order (alphabetically). 
-# The method "ctm_compact" is not compatible with any of the overlay methods.
+# 覆盖(overlay)方案可以于其他的方案组合，方案的先后顺序可以通过字母顺序来排列。
+# 方案“ctm_compact”与任何覆盖(overlay)方案都不兼容。
 method=<method>
 
-# (Required) List of replacment tiles to use.  Each tile must be a separate
-# image, just like terrain and item textures.  Tiles can be specified in
-# several ways
+# (必须) 所要用到的纹理的列表. 每个纹理必须是相互分离的
+# 就如地形纹理和物品纹理一样，纹理可以由以下的方法来指定。
 #   0                   -> 0.png
 #   8-11                -> 8.png, 9.png, 10.png, 11.png
 #   name                -> name.png
@@ -91,24 +92,21 @@ method=<method>
 #   <skip>              -> skip the tile, continue with next CTM properties
 #   <default>           -> use the default texture for that block/tile
 #   full/path/name.png  -> full/path/name.png
-# In all cases but the last, the png file must be in the same directory as
-# the properties file itself.
-# The formats can be mixed and matched, e.g.
+# 除了最后一种情况，其他的指定方法png文件必须和properties文件在相同的文件夹之中
+# 格式可以混合与匹配e.g.
 #   tiles=0-4 5 some/other/name.png
-# The overlay methods may use the special name "<skip>" for empty tiles 
-# that are to be skipped. The overlay methods can't use the tile name "<default>".
+# 覆盖(overlay)方案可以使用特殊的名称"<skip>"来忽略空纹理，覆盖(overlay)方案无法使用纹理名"<default>"
 tiles=<list of tiles>
 
-# (Optional) Connect type.  For methods that connect to adjacent blocks,
-# specify how the game should decide if two blocks should be connected.
-#   block: Connect if block id of this block = block id of neighbor.
-#   tile: Connect if tile texture of this block = tile of neighbor.
-#   material: Connect if block material (stone, dirt, etc.) = neighbor's.
-#   state: Connect if block state (block + properties) = neighbour's
-# The default is block for block-based properties files and tile for tile-based.
+# (可选) 连接类型，为连接到相邻块的连接方案指定连接的条件.
+#   block: 此方块ID=相邻方块ID时.
+#   tile: 此方块的纹理=相邻块的纹理时.
+#   material: 此方块的材质=相邻块的材质时.
+#   state:  此方块的状态(块 + 属性) = 相邻块的状态时.
+# 块的默认连接类型为block,纹理的默认连接类型为tile.
 connect=<block | tile | material | state>
 
-# (Optional) Connect tiles. Only for method "overlay"
+# (可选) 连接纹理，只对应覆盖(overlay)方案。
 # Connects only to blocks which are using the specified tiles 
 connectTiles=<list of tiles>
 
@@ -289,23 +287,19 @@ symmetry=<none | opposite | all>
 linked=<true | false>
 
 ###############################################################################
-# Repeat pattern textures
+# 重复图案纹理(Repeat pattern textures)
 ###############################################################################
 
 method=repeat
-# (Required) Width of the repeating pattern.
+# (必须) 重复图案的宽度.
 width=<width of pattern>
-# (Required) Height of the repeating pattern.
+# (必须) 重复图案的高度.
 height=<height of pattern>
-# (Required) List of exactly width * height tiles.
+# (必须) 面的宽与高.
 tiles=<list of width * height tiles>
-# (Optional) Desired level of symmetry for the faces of each block.  Applies to
-# standard 6-sided blocks only.
-# none: All 6 faces are textured so that the pattern tiling looks the same from
-# all sides.  This is the default.
-# opposite: 2-way symmetry; opposing faces have the same texture, which means
-# that tiling on the south and east faces will be mirrored left-to-right from
-# compared to the north and west faces.
+# (可选) 每个块所期望的面对称等级，只对标准6个面的方块有效
+# none: 所有的6个面都拥有纹理，所以从任何一个面看平铺的纹理都是一样的(默认值)
+# opposite: 双向对称；相对面拥有相同的纹理，这代表相比与北面和西面，东面和南面是从左到右的镜像纹理
 symmetry=<none | opposite>
 
 ###############################################################################
