--- a/ctm.properties
+++ b/ctm.properties
@@ -38,9 +38,9 @@
 # The first match wins.
 matchTiles=<list of matching tile names>
 
-# 在配置中引用一个来自于原版(vanilla)MC的纹理, 只需要直接声明此面的名称:
+# 在配置中引用一个来自于原版(vanilla)MC的贴图, 只需要直接声明此面的名称:
 #   matchTiles=dirt
-# 在配置中引用一个来自于mod的纹理，你需要像下面一样进行声明
+# 在配置中引用一个来自于mod的贴图，您需要像下面一样进行声明
 #   matchTiles=botania:blazeblock
 # 从CTM规则中导出的纹理也可被其他的规则所引用，纹理的引用名称为此纹理的完整路径
 #   matchTiles=optifine/ctm/mygrass/1.png
@@ -59,18 +59,18 @@ matchBlocks=<list of blocks + optional properties>
 #     matchBlocks=<name>
 # 除非您具体的指定了这两个属性中的任意一个.
 
-# (可选) 若存在两个以上的属性文件都作用于同一个块，则权重值最高的那个属性文件将被使用，若出现权重值相同的状况，则比较属性文件名，权重的值默认为零。
+# (可选) 若存在两个以上的属性文件都作用于同一个块，则权重值最高的那个属性文件将被使用，若出现权重值相同的状况，则比较属性文件名，权重的值默认为0。
 weight=<integer>
 
-# (必须) 选择块替换纹理时的应用方案:
+# (必须) 选择块替换贴图时的应用方案:
 # 方案:
-#   ctm: 标准的8通道方案，使用47张纹理。
-#   ctm_compact: 紧凑的8通道方案，使用5张纹理。
-#   horizontal: 块的纹理只和位于左侧或右侧的相邻块的纹理相连(例如书架)。
-#   vertical: 块的纹理只和顶部或者底部的相邻方块的纹理相连.
-#   horizontal+vertical: 首先和位于水平位置的相邻块的纹理相连，再于位于垂直方向的相邻块的纹理相连。
-#   vertical+horizontal: 首先和位于垂直方向的相邻块的纹理相连，再于位于水平位置的相邻块的纹理相连。
-#   top: 块的纹理只和在这个方块上方的相邻块的纹理相连。
+#   ctm: 标准的8通道方案，使用47张贴图。
+#   ctm_compact: 紧凑的8通道方案，使用5张贴图。
+#   horizontal: 块的贴图只和位于左侧或右侧的相邻块的贴图相连(例如书架)。
+#   vertical: 块的贴图只和顶部或者底部的相邻方块的纹理相连.
+#   horizontal+vertical: 首先和位于水平位置的相邻块的贴图相连，再于位于垂直方向的相邻块的贴图相连。
+#   vertical+horizontal: 首先和位于垂直方向的相邻块的贴图相连，再于位于水平位置的相邻块的贴图相连。
+#   top: 块的贴图只和在这个方块上方的相邻块的贴图相连。
 #   random: 随机选择要连接的面的方向.
 #   repeat: 在指定面积大小的块的区域中显示指定的图案。
 #   fixed: Use a single fixed tile.  Equivalent to random with only one tile.
@@ -83,8 +83,8 @@ weight=<integer>
 # 方案“ctm_compact”与任何覆盖(overlay)方案都不兼容。
 method=<method>
 
-# (必须) 所要用到的纹理的列表. 每个纹理必须是相互分离的
-# 就如地形纹理和物品纹理一样，纹理可以由以下的方法来指定。
+# (必须) 所要用到的贴图的列表. 每个贴图必须是相互分离的
+# 就如地形贴图和物品贴图一样，贴图可以由以下的方法来指定。
 #   0                   -> 0.png
 #   8-11                -> 8.png, 9.png, 10.png, 11.png
 #   name                -> name.png
@@ -93,49 +93,49 @@ method=<method>
 #   <default>           -> use the default texture for that block/tile
 #   full/path/name.png  -> full/path/name.png
 # 除了最后一种情况，其他的指定方法png文件必须和properties文件在相同的文件夹之中
-# 格式可以混合与匹配e.g.
+# 格式可以混合与匹配
 #   tiles=0-4 5 some/other/name.png
-# 覆盖(overlay)方案可以使用特殊的名称"<skip>"来忽略空纹理，覆盖(overlay)方案无法使用纹理名"<default>"
+# 覆盖(overlay)方案可以使用特殊的名称"<skip>"来忽略空贴图，覆盖(overlay)方案无法使用贴图名"<default>"
 tiles=<list of tiles>
 
 # (可选) 连接类型，为连接到相邻块的连接方案指定连接的条件.
 #   block: 此方块ID=相邻方块ID时.
-#   tile: 此方块的纹理=相邻块的纹理时.
+#   tile: 此方块的贴图=相邻块的贴图时.
 #   material: 此方块的材质=相邻块的材质时.
 #   state:  此方块的状态(块 + 属性) = 相邻块的状态时.
 # 块的默认连接类型为block,纹理的默认连接类型为tile.
 connect=<block | tile | material | state>
 
-# (可选) 连接纹理，只对应覆盖(overlay)方案。
-# Connects only to blocks which are using the specified tiles 
+# (可选) 连接贴图条件，只用于覆盖(overlay)方案。
+# 仅和使用指定贴图的块连接：
 connectTiles=<list of tiles>
 
-# (Optional) Connect blocks. Only for method "overlay"
-# Connects only to specified blocks 
+# (可选) 连接方块条件，只用于覆盖(overlay)方案。
+# 仅和特定块连接
 connectBlocks=<list of blocks>
 
-# (Optional) Faces.  
-# Limit the mod to only certain faces of the block.
-#   bottom: Bottom face (negative y).
-#   top: Top face (positive y).
-#   north: North face (negative z).
-#   south: South face (positive z).
-#   east: East face (positive x).
-#   west: West face (negative x).
-#   sides: Shorthand for north south east west.
-#   all: All sides.
-# This property is ignored on non-standard blocks.
+# (可选) 面(Faces).  
+# 限制mod只用于方块的特定面。
+#   bottom: 底面 (negative y).
+#   top: 顶面 (positive y).
+#   north: 北面 (negative z).
+#   south: 南面 (positive z).
+#   east: 东面 (positive x).
+#   west: 西面 (negative x).
+#   sides: 水平面（东面，西面，南面，北面）的简写形式.
+#   all: 所有面.
+# 在非标准块上忽略此属性.
 faces=<combination of: north south east west top bottom sides all>
 
-# (Optional) Biome and height restrictions.  
-# Limit only to certain biomes or height ranges.
-# The vanilla biome names are listed here: https://minecraft.gamepedia.com/Biome#Biome_IDs
-# Biomes added by mods can also be used.
-# The legacy properties "minHeight" and "maxHeight" are also recognized.
+# (可选) 生物群落与高度限制
+# 只对特定的生物群落和特定高度范围有效.
+# 原版游戏的生物群落的列表可以通过此链接查询：https://minecraft.gamepedia.com/Biome#Biome_IDs
+# 通过mod添加的生物群落也可以在此处使用
+# 遗留属性“minHeight”和“maxHeight”也可被识别
 biomes=<biome list>
 heights=<height ranges>
 
-# (Optional) Compact CTM tile replacement. Only for method "ctm_compact"
+# (可选) 紧凑CTM贴图替换，此配置只用于"ctm_compact"方案
 # Allows to define replacement tile for a specific CTM case
 # <ctm_index> is the index of the CTM case from the CTM template (0-46)
 # <tile_index> is the index of the tile as defined in "tiles" (not the tile name!)
@@ -148,25 +148,25 @@ ctm.<ctm_index>=<tile_index>
 # Default is -1 (disabled
 tintIndex=<index>
 
-# (Optional) Tint block. Only for method "overlay"
+# (可选) Tint block. Only for method "overlay"
 # The block used for the tile texture tinting. 
 # Different blocks use different colors for the same tint index. 
 tintBlock=<block>
 
-# (Optional) Layer. Only for method "overlay"
-# The layer on which the overlay texture should be rendered
-# Values:
-#   cutout_mipped - transparent textures with mipmaps
-#   cutout - transparent textures without mipmaps
-#   translucent - translucent textures with mipmaps
-# Default is "cutout_mipped" 
+# (可选) 渲染等级，只对"overlay"方案有效
+# 此值确定了覆盖贴图是否被渲染
+# 值:
+#   cutout_mipped - 带纹理映射(mipmaps)的透明贴图
+#   cutout - 无纹理映射(mipmaps)的透明贴图
+#   translucent - 带纹理映射(mipmaps)的半透明贴图
+# 默认为 "cutout_mipped" 
 layer=<cutout_mipped|cutout|translucent>
 
-# (Optional) Name
-# Only for blocks which have corresponding nameable tile entities.
-# For example:
+# (可选) 名称
+# 只对拥有对应的可命名的贴图实体的方块有效。
+# 例如:
 #   beacon brewing_stand enchanting_table furnace dispenser dropper hopper
-# See "custom_guis.properties" for the name matching syntax. 
+# 参阅 "custom_guis.properties"的名称匹配语法部分。
 name=<name>
 
 ###############################################################################
