--- a/ctm.properties
+++ b/ctm.properties
@@ -38,11 +38,11 @@
 # The first match wins.
 matchTiles=<list of matching tile names>
 
-# 在配置中引用一个来自于原版(vanilla)MC的贴图, 只需要直接声明此面的名称:
+# 在配置中引用一个来自于原版(vanilla)MC的面纹理, 只需要直接声明此面的名称:
 #   matchTiles=dirt
-# 在配置中引用一个来自于mod的贴图，您需要像下面一样进行声明
+# 在配置中引用一个来自于mod的面纹理，您需要像下面一样进行声明
 #   matchTiles=botania:blazeblock
-# 从CTM规则中导出的纹理也可被其他的规则所引用，纹理的引用名称为此纹理的完整路径
+# 从CTM规则中导出的面纹理也可被其他的规则所引用，面纹理的引用名称为此面纹理的完整路径
 #   matchTiles=optifine/ctm/mygrass/1.png
 # 块的格式 (可选部分位于<>中)
 #   <namespace:>name<:property1=value1,value2...:property2=value1,value2...>
@@ -62,18 +62,18 @@ matchBlocks=<list of blocks + optional properties>
 # (可选) 若存在两个以上的属性文件都作用于同一个块，则权重值最高的那个属性文件将被使用，若出现权重值相同的状况，则比较属性文件名，权重的值默认为0。
 weight=<integer>
 
-# (必须) 选择块替换贴图时的应用方案:
+# (必须) 选择块替换面纹理时的应用方案:
 # 方案:
-#   ctm: 标准的8通道方案，使用47张贴图。
-#   ctm_compact: 紧凑的8通道方案，使用5张贴图。
-#   horizontal: 块的贴图只和位于左侧或右侧的相邻块的贴图相连(例如书架)。
-#   vertical: 块的贴图只和顶部或者底部的相邻方块的纹理相连.
-#   horizontal+vertical: 首先和位于水平位置的相邻块的贴图相连，再于位于垂直方向的相邻块的贴图相连。
-#   vertical+horizontal: 首先和位于垂直方向的相邻块的贴图相连，再于位于水平位置的相邻块的贴图相连。
-#   top: 块的贴图只和在这个方块上方的相邻块的贴图相连。
+#   ctm: 标准的8通道方案，使用47张面纹理。
+#   ctm_compact: 紧凑的8通道方案，使用5张面纹理。
+#   horizontal: 块的面纹理只和位于左侧或右侧的相邻块的面纹理相连(例如书架)。
+#   vertical: 块的面纹理只和顶部或者底部的相邻方块的面纹理相连.
+#   horizontal+vertical: 首先和位于水平位置的相邻块的面纹理相连，再于位于垂直方向的相邻块的面纹理相连。
+#   vertical+horizontal: 首先和位于垂直方向的相邻块的面纹理相连，再于位于水平位置的相邻块的面纹理相连。
+#   top: 块的面纹理只和在这个方块上方的相邻块的面纹理相连。
 #   random: 随机选择要连接的面的方向.
 #   repeat: 在指定面积大小的块的区域中显示指定的图案。
-#   fixed: Use a single fixed tile.  Equivalent to random with only one tile.
+#   fixed: 使用单一固定的面纹理，等于只使用一张面纹理的随机模式
 #   overlay: Overlay for block transitions, uses 17 tiles.
 #   overlay_ctm: Overlay variant of method "ctm".
 #   overlay_random: Overlay variant of method "random".
@@ -83,7 +83,7 @@ weight=<integer>
 # 方案“ctm_compact”与任何覆盖(overlay)方案都不兼容。
 method=<method>
 
-# (必须) 所要用到的贴图的列表. 每个贴图必须是相互分离的
+# (必须) 所要用到的面贴图的列表. 每个贴图必须是相互分离的
 # 就如地形贴图和物品贴图一样，贴图可以由以下的方法来指定。
 #   0                   -> 0.png
 #   8-11                -> 8.png, 9.png, 10.png, 11.png
@@ -100,14 +100,14 @@ tiles=<list of tiles>
 
 # (可选) 连接类型，为连接到相邻块的连接方案指定连接的条件.
 #   block: 此方块ID=相邻方块ID时.
-#   tile: 此方块的贴图=相邻块的贴图时.
+#   tile: 此方块的面贴图=相邻块的面贴图时.
 #   material: 此方块的材质=相邻块的材质时.
 #   state:  此方块的状态(块 + 属性) = 相邻块的状态时.
 # 块的默认连接类型为block,纹理的默认连接类型为tile.
 connect=<block | tile | material | state>
 
-# (可选) 连接贴图条件，只用于覆盖(overlay)方案。
-# 仅和使用指定贴图的块连接：
+# (可选) 连接面纹理条件，只用于覆盖(overlay)方案。
+# 仅和使用指定面纹理的块连接：
 connectTiles=<list of tiles>
 
 # (可选) 连接方块条件，只用于覆盖(overlay)方案。
@@ -135,22 +135,21 @@ faces=<combination of: north south east west top bottom sides all>
 biomes=<biome list>
 heights=<height ranges>
 
-# (可选) 紧凑CTM贴图替换，此配置只用于"ctm_compact"方案
-# Allows to define replacement tile for a specific CTM case
-# <ctm_index> is the index of the CTM case from the CTM template (0-46)
-# <tile_index> is the index of the tile as defined in "tiles" (not the tile name!)
-# With "ctm_compact" you can define more than 5 tiles and use the additional 
-# tiles as replacements
+# (可选) 紧凑CTM面纹理替换，此配置只用于"ctm_compact"方案
+# 可以让特定的CTM方案使用指定的面纹理
+# <ctm_index>是CTM模板(0-46)中实例的索引值
+# <tile_index> 是"tiles"里定义的面纹理的索引(不是面纹理的名字!)
+# 使用“ctm_compact”，您可以定义超过5个图块并使用其他图块作为替换
 ctm.<ctm_index>=<tile_index>  
 
-# (Optional) Tint index. Only for method "overlay"
-# Tint index for the tile texture
-# Default is -1 (disabled
+# (可选) 色调索引，只适用于"overlay"方案
+# 面贴图的色调索引
+# 默认值为-1(禁用)
 tintIndex=<index>
 
-# (可选) Tint block. Only for method "overlay"
-# The block used for the tile texture tinting. 
-# Different blocks use different colors for the same tint index. 
+# (可选) 色调块，只使用于"overlay"方案
+# 此块用于面贴图色调
+# 在不同的方块中相同的色调索引使用不同的颜色
 tintBlock=<block>
 
 # (可选) 渲染等级，只对"overlay"方案有效
@@ -170,120 +169,108 @@ layer=<cutout_mipped|cutout|translucent>
 name=<name>
 
 ###############################################################################
-# Everything below here is for specific ctm methods.  Each .properties file
-# should contain only one of these sections.
+# 以下的所有内容都为特定的ctm方案，每个".properties"文件必须包含以下方案中的其中一个
 ###############################################################################
 
 ###############################################################################
-# Standard 8-way connected textures
+# 标准8通道连接纹理
 ###############################################################################
 
 method=ctm
-# (Required) List of 47 tiles to use.
+# (必须) 47个用到的面纹理的列表
 tiles=<47 tiles>
-# (Optional) Whether to show seams on inner edges when connecting to adjacent
-# blocks.
+# (可选) 连接到相邻块时是否在内边缘上显示接缝
 innerSeams=false
 
 ###############################################################################
-# Compact 8-way connected textures
+# 紧凑8通道连接纹理
 ###############################################################################
 
 method=ctm_compact
-# (Required) List of 5 tiles to use.
+# (必须) 5个将要用到的纹理的列表.
 tiles=<5 tiles>
-# (Optional) Whether to show seams on inner edges when connecting to adjacent
-# blocks.
+# (可选) 连接到相邻块时是否在内边缘上显示接缝
 innerSeams=false
 
 ###############################################################################
-# Compact 8-way connected textures with special cases
+# 带特殊CTM实例的紧凑8通道连接纹理
 ###############################################################################
 
 method=ctm_compact
-# (Required) List of 5 tiles to use.
+# (必须) 5个将要用到的纹理的列表.
 tiles=<5 tiles> <additional tiles>
-# (Optional) Indexes of replacement tiles for some CTM cases
+# (可选) 部分CTM实例的替换面纹理索引
 ctm.46=5
 ctm.17=6
 
 ###############################################################################
-# Horizontal-only connected textures
+# 水平方向连接纹理
 ###############################################################################
 
 method=horizontal
-# (Required) List of 4 tiles to use.
+# (必须) 4个将要用到的纹理的列表.
 tiles=<4 tiles>
 
 ###############################################################################
-# Vertical-only connected textures
+# 垂直方向连接纹理
 ###############################################################################
 
 method=vertical
-# (Required) List of 4 tiles to use.
+# (必须) 4个将要用到的纹理的列表.
 tiles=<list of tiles>
 
 ###############################################################################
-# Top connected textures
+# 顶部连接纹理
 ###############################################################################
 
 method=top
-# (Required) Only one tile is needed.
+# (必须) 1个将要用到的纹理.
 tiles=<single tile>
 
 ###############################################################################
-# Random textures
+# 随机纹理
 ###############################################################################
 
 method=random
-# (Required) List of any number of tiles to choose from.
+# (必须) 若干个将要用到的纹理的列表.
 tiles=<list of tiles>
-# (Optional) List of weights to apply to the random choice.  For example, if
-# you have
+# (可选) 每个纹理的选择权重值
+# 例如，如果您在配置中写入：
 # tiles=6-11
 # weights=10 1 10 2 7 3
-# then tiles 6 and 8 will have a weight of 10, 7 will have a weight of 1, etc.
-# Weights do not have to total 100 or any other particular value.  In the above
-# example, tiles 6 and 8 will each be used ~30.3% (10/(10+1+10+2+7+3)) of the
-# time and so forth.
+# 那么面贴图6和8的权重都为10，面贴图7的权重为1，如此类推。
+# 权重不必总计为100或任何其他特定值，就例子而言，面贴图6和8将被使用的几率都约为 ~30.3% (10/(10+1+10+2+7+3))
 weights=<same-size list of weights>
-# Random loops
-# Repeats the random function several times to increase randomness.
-# Can be used to make different textures use different random patterns.
-# Higher values may decrease the chunk loading speed.
-# Default is 0.
+# 随机循环
+# 重复使用随机函数来提高随机性
+# 可用于使不同的纹理使用不同的随机图案。
+# 较高的值可能会降低块的加载速度。
+# 默认值是0.
 randomLoops=<0-9>
-# (Optional) Desired level of symmetry for the faces of each block.  Applies to
-# standard 6-sided blocks only.
-# none: All 6 faces are textured independently.  This is the default.
-# opposite: 2-way symmetry; opposing faces have the same texture, but each pair
-# can potentially have a different texture.
-# all: All 6 faces have the same texture.
+# (可选) 每个块的面的所需对称等级。 仅适用于标准6面块。
+# none: 所有的6个面都拥有纹理，所以从任何一个位置看面的纹理都是一样的(默认值)
+# opposite: 双通道对称；相对面拥有相同的纹理，每对相对面组合的纹理都不同
+# all: 所有6个面都一样
 symmetry=<none | opposite | all>
-# (Optional) Texture linking between related blocks.
-# If true, OptiFine uses the same random number seed for all parts of a
-# multiblock object, for example, the top and bottom halves of tall grass.
-# This allows you to create randomized textures that will remain consistent
-# within each set of blocks.  If this property is false, the two halves will
-# be "scrambled", i.e., chosen independently.
+# (可选) 相关块之间的纹理链接
+# 若此设置为ture,OptiFine将对多块对象的所有部分使用相同的随机数种子，例如：高草的上半部和下半部。
+# 此选项可以保证多块对象的所有部分都具有贴图一致性，若为false，那么高草的上半部和下半部的贴图将会因不一致而“撕裂”，每个部分的贴图会自行独立选择
 #
-# NOTE: For this to work properly, you'll need multiple properties files with
-# linked=true and the same number of replacement textures and same set of
-# weights.  For example,
-# double_plant_top.properties:
+# 提示：为了此功能正常工作，您需要多个properties文件且所有的linked都为true，每个将要替换的纹理的权重都相同
+# 例：
+# double_plant_top.properties文件中:
 #   method=random
 #   tiles=grass_top1 grass_top2 grass_top3
 #   weights=1 2 3
 #   linked=true
 
-# double_plant_bottom.properties:
+# double_plant_bottom.properties文件中:
 #   method=random
 #   tiles=grass_bottom1 grass_bottom2 grass_bottom3
 #   weights=1 2 3
 #   linked=true
 #
-# The default is false.  The linked property currently applies only to plants
-# (e.g., reeds), double plants, and doors.
+# 默认值为false，链接属性目前仅适用于植物(例如芦苇),两格高的植物和门
 linked=<true | false>
 
 ###############################################################################
