--- a/ctm.properties
+++ b/ctm.properties
@@ -35,7 +35,7 @@
 
 # (可选)此方法要作用的块与/或面 
 # 多个.properties文件可以对应相同的块/面，且这些文件会按文件名的字母顺序来处理，所有基于名称的实体将比基于ID的实体拥有更高的检查优先级
-# The first match wins.
+# 第一个匹配到的将被使用
 matchTiles=<list of matching tile names>
 
 # 在配置中引用一个来自于原版(vanilla)MC的贴图, 只需要直接声明此面的名称:
