--- a/custom_guis.properties
+++ b/custom_guis.properties
@@ -8,23 +8,23 @@
 #
 # 不同的容器类型存在不同的需求与限制，具体内容见下文
 ####################################################
-# 常规属性General properties
+# 常规属性General properties)
 #
-# Container (required)
-# Values: 
+# 容器 (必须)
+# 值: 
 #   anvil beacon brewing_stand chest crafting dispenser enchantment furnace 
 #   hopper horse villager shulker_box creative inventory
 container=<container>
 #
-# Texture (required)
-# Replacement for the GUI texture
-# The "texture" property replaces the default GUI texture. 
-# The "texture.<path>" property can be used to replace any GUI texture
-# <path> is relative to "/assets/minecraft/textures/gui" 
-# The creative inventory GUI does not have a default texture so it has to use path textures.
+# 纹理 (必须)
+# 用于替换GUI纹理
+# "texture"属性替换默认的GUI纹理
+# "texture.<path>"属性用于替换掉任意的GUI纹理
+# 其中"<path>"指的是"/assets/minecraft/textures/gui"目录
+# 创造模式物品栏的GUI并不包含默认GUI，此时必须使用带路径的纹理。
 #
-# Example for creative inventory:
-#   # File "assets/minecraft/optifine/gui/container/creative/creative_desert.properties
+# 创造模式物品栏GUI的例子:
+#   # 文件目录 "assets/minecraft/optifine/gui/container/creative/creative_desert.properties"
 #   container=creative
 #   biomes=desert
 #   texture.container/creative_inventory/tab_inventory=tab_inventory_desert
@@ -32,113 +32,112 @@ container=<container>
 #   texture.container/creative_inventory/tab_items=tab_items_desert
 #   texture.container/creative_inventory/tab_item_search=tab_item_search_desert
 #
-# At least one "texture" or "texture.<path>" is required.
+# 其中至少包含一个"texture"或是"texture.<path>".
 texture=<texture>
 texture.<path>=<texture>
 #
-# Custom entity or block entity name (optional)
+# 自定义实体或方块实体名 (可选)
 #
-# The name uses the syntax similar to the Custom Item Textures NBT tags. 
-# A value starting with "!" performs a negative match (not).
+# 此名字的命名语法类似于自定义物品纹理(Custom Item Textures)NBT标签. 
+# 值以"!"开头将会是否匹配.
 #
-# Examples:
-# - Match name:
+# 例:
+# - Match name(匹配名):
 #   name=My Sword
 #
-# - Match name with special formatting:
-# NOTE: For best compatibility, use the escape sequence '\u00a7' instead of §:
+# - Match name with special formatting（带特殊格式的匹配名):
+# 注意: 考虑到最佳兼容性，请使用'\u00a7'替代 §:
 #   name=\u00a74\u00a7oMy Sword
 #
-# - Wildcards using ? and *
+# - 通配符可以使用"?"和"*"符号进行匹配:
 #   name=pattern:Letter to *
-# Matches
+# 可以匹配到的：
 #   Letter to Herobrine
 #   Letter to a creeper
-# but not
+# 无法匹配：
 #   letter to Herobrine
 #
-# - Wildcards, case insensitive
+# - 通配符不区分大小写的写法：
 #   name=ipattern:Letter to *
-# Matches
+# 可以匹配到的：
 #   Letter to Herobrine
 #   Letter to a creeper
 #   letter to Herobrine
 #
-# - Java regular expressions
-#   (See http://docs.oracle.com/javase/6/docs/api/java/util/regex/Pattern.html)
+# - Java的正则表达式:
+#   (参见 http://docs.oracle.com/javase/6/docs/api/java/util/regex/Pattern.html)
 #   name=regex:Letter (to|from) .*
-# Matches
+# 可以匹配到的：
 #   Letter to Herobrine
 #   Letter from Herobrine
-# but not
+# 无法匹配：
 #   letter to Herobrine
 #   A Letter to Herobrine
 #
-# - Java regular expressions, case insensitive
+# - Java的正则表达式不区分大小写的写法：
 #   name=iregex:Letter (to|from) .*
-# Matches
+# 可以匹配到的：
 #   Letter to Herobrine
 #   Letter from Herobrine
 #   letter to Herobrine
-# but not
+# 无法匹配：
 #   A Letter to Herobrine
 #
-# NOTE: Any backslashes must be doubled as well.  Literal backslashes within a
-# regular expression or wildcard must be quadrupled.
-# Correct:
+# 注意: 所有的反斜杠必须成对出现。在带正则表达式或是通配符的情况下无特殊功能的字符串反斜杠以四个'\'来表示。
+# 正确格式:
 #   name=regex:\\d+
 #   name=regex:\\\\
 #   name=/\\/\\
-# Wrong:
+# 错误格式:
 #   name=regex:\d+
 #   name=regex:\\
 #   name=/\/\
 name=<name>
 #
-# Biomes (optional)
-# The vanilla biome names are listed here: https://minecraft.gamepedia.com/Biome#Biome_IDs
-# Biomes added by mods can also be used.
+# 生物聚落 (可选)
+# 原版中所有的生物聚落类型参见: https://minecraft.gamepedia.com/Biome#Biome_IDs
+# 通过mod添加的生物聚落也可以在此配置中使用
 biomes=<biome list>
 #
-# Heights (optional)
+# 高度 (可选)
 heights=<height ranges>
 #
 ####################################################
-# Chest specific properties
+# 箱子的特殊属性
 #
-# Large chest (optional)
+# 大箱子 (可选)
 large=<true|false>
 #
-# Trapped chest (optinal)
+# 陷阱箱 (可选)
 trapped=<true|false>
 # 
-# Christmas chest (optional)
+# 圣诞箱 (可选)
 christmas=<true|false>
 #
-# Ender chest (optional)
+# 末影箱 (可选)
 ender=<true|false>
 #
 ####################################################
-# Beacon specific properties
+# 信标的特殊属性
 #
-# Levels (optional)
+# 等级 (可选)
 levels=<levels>
 #
 ####################################################
-# Villager specific properties
+# 村民的特殊属性
 #
-# Professions (optional)
-# List of villager professions with optional careers
+# 专长(可选)
+# 下表为村民所有的专常与职业
 #
 # Entry format
 #   <profession>[:carrer1,career2,...]
 #
-# Profession     Careers
+# 专长            职业
 # ============== ===================================== 
-# farmer         farmer, fisherman, shepherd, fletcher
+# farmer(农夫)   farmer(农夫),fisherman(渔夫), shepherd(牧民), fletcher(猎人)
 # librarian      librarian, cartographer
 # priest         cleric
-# blacksmith     armor, weapon, tool
+# 铁匠           armor(护甲), weapon(武器), tool(工具)
 # butcher        butcher, leather
 # nitwit         nitwit
 #
