--- a/custom_guis.properties
+++ b/custom_guis.properties
@@ -132,38 +132,38 @@ levels=<levels>
 # Entry format
 #   <profession>[:carrer1,career2,...]
 #
-# 专长            职业
-# ============== ===================================== 
-# farmer(农夫)   farmer(农夫),fisherman(渔夫), shepherd(牧民), fletcher(猎人)
-# librarian      librarian, cartographer
-# priest         cleric
-# 铁匠           armor(护甲), weapon(武器), tool(工具)
-# butcher        butcher, leather
-# nitwit         nitwit
+# 专长                  职业
+# ==============        ===================================== 
+# farmer(农夫)          farmer(农夫),fisherman(渔夫), shepherd(牧民), fletcher(制箭师)
+# librarian(图书管理)   librarian(图书管理员), cartographer(制图师)
+# priest(神学)          cleric(牧师)
+# blacksmith(铁匠)      armor(护甲), weapon(武器), tool(工具)
+# butcher(屠宰业)       butcher(屠夫), leather(皮匠)
+# nitwit(傻子)          nitwit(傻子)
 #
-# Example:
+# 例子:
 #   # Professions farmer (all careers) or blacksmith (all careers)
 #   professions=farmer blacksmith
 #   # Careers fisherman, shepherd or nitwit
 #   professions=farmer:fisherman,shepherd nitwit:nitwit
 #
-# Professions and careers can also be given by their numeric ID values.
-# See https://minecraft.gamepedia.com/Villager#Professions_and_careers
+# 专长与职业同时也可以通过数字ID的值来指定
+# 参见 https://minecraft.gamepedia.com/Villager#Professions_and_careers
 professions=<professions>
 #
 ####################################################
-# Horse and dispenser specific properties
+# 马和发射器的特殊属性
 #
-# Variants (optional)
-# Horse variants: horse donkey mule llama
-# Dispenser variants: dispenser dropper
+# 变种 (可选)
+# 马的变种: horse donkey mule llama
+# 发射器变种: dispenser dropper
 variants=<variants>
 #
 ####################################################
-# Lllama and shulker box specific properties
+# 羊驼和潜影盒的特殊属性
 #
-# Colors (optional)
-# Shulker box color or llama carpet color
-# List of colors: white orange magenta light_blue yellow lime pink gray silver cyan purple blue brown green red black
+# 颜色 (可选)
+# 潜影盒或羊毛方块的颜色
+# 可选颜色: white orange magenta light_blue yellow lime pink gray silver cyan purple blue brown green red black
 colors=<colors>
 #
