--- a/ctm.properties
+++ b/ctm.properties
@@ -1,6 +1,6 @@
 ###############################################################################
 # OptiFine的纹理连接功能的实例
-# 基于MCPatcher的纹理连接mod的配置
+# 基于MCPatcher的纹理连接mod
 #
 # 尚未实现的功能:
 # - renderPass
